--- a/DC2016-HxH.html
+++ b/DC2016-HxH.html
@@ -34,9 +34,9 @@
 										<center><li><a class="button">Episode - 01</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+										<a href="https://goo.gl/Pb3II1" class="button"> Solidfiles </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=839216" class="button"> Torrent </a> 
+										<a href="https://goo.gl/lrYt6O" class="button"> Google Drive </a></p></li></center>
 									</ul>
 									<!-- 
 									<hr width="100%">
