--- a/Summer2016.html
+++ b/Summer2016.html
@@ -22,12 +22,11 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Qualidea Code - 01 & 02<br>@TS & TL/Enc</a></li>
-							<li><a href="#">Masou Gakuen HxH - 01 - 02 & 03<br>@/Enc/Edit & TL/Enc</a></li>
-							<li><a href="#">91 Days - 02<br>@TL/Enc</a></li>
-							<li><a href="#">Amaama to Inazuma - 02 & 03<br>@TL & TL/Enc</a>
-							<li><a href="#">Danganronpa 3 - Mirai-hen - 01 & 02<br>@Timing/Edit & TL/Enc</a>
-							<li><a href="#">Danganronpa 3 - Zetsubou-hen - 01<br>@Timing/Edit/Enc</a></li>
+							<li><a href="#">Qualidea Code - 01 - 02 & 03-05<br>@TS/TL/Enc</a></li>
+							<li><a href="#">Masou Gakuen HxH - 02 - 06<br>@Enc</a></li>
+							<li><a href="#">91 Days - 02 & 03-05<br>@Edit & Edit/Enc/Timing</a></li>
+							<li><a href="#">Amaama to Inazuma - 02 & 03-05<br>@TS & TL/Enc</a></li>
+							<li><a href="#">New Game! - 01 - 06<br>@TL/Enc</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -54,7 +53,7 @@
 							<br>
 							<ul class="actions">
 								<li><!-- <a href="http://puella.god.jp/DC2016-QC.html" --><a class="button scrolly">Qualidea Code</a>
-								<!-- <a href="http://puella.god.jp/DC2016-HxH.html" --><a class="button scrolly">Masou Gakuen HxH</a>
+								<a href="http://puella.god.jp/DC2016-HxH.html" a class="button scrolly">Masou Gakuen HxH</a>
 								<a href="http://puella.god.jp/DC2016-91D.html" a class="button scrolly">91 Days</a>
 								<a href="http://puella.god.jp/DC2016-Amaama.html" a class="button scrolly">Amaama to Inazuma</a></li>
 							</ul>
