--- a/DC2016-HxH.html
+++ b/DC2016-HxH.html
@@ -38,15 +38,16 @@
 										<a href="http://www.nyaa.se/?page=view&tid=839216" class="button"> Torrent </a> 
 										<a href="https://goo.gl/lrYt6O" class="button"> Google Drive </a></p></li></center>
 									</ul>
-									<!-- 
+									 
 									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 02</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+										<a href="https://www.solidfiles.com/v/X2LZg4P3qLyzN" class="button"> Solidfiles </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=839450" class="button"> Torrent </a> 
+										<a href="https://goo.gl/BNkr7Y" class="button"> Google Drive </a></p></li></center>
+									<!--
 									</ul>
 									<hr width="100%">
 									<ul class="actions">
