--- a/DC2016-HxH.html
+++ b/DC2016-HxH.html
@@ -57,16 +57,17 @@
 										<a href="https://www.solidfiles.com/v/WwQdwyQgRXQ5r" class="button"> Solidfiles </a> 
 										<a href="http://www.nyaa.se/?page=view&tid=839855" class="button"> Torrent </a> 
 										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCQjd0T2VhVE9IaWs" class="button"> Google Drive </a></p></li></center>
-									<!--
+									
 									</ul>
 									<hr width="100%">
 									<ul class="actions">
 										<center><li><a class="button">Episode - 04</a></li>
 										<br><br>
 										<p style="line-height: 0.02em;">
-										<a href="http://solidfiles.com/" class="button"> Solidfiles </a> 
-										<a href="http://nyaa.se" class="button"> Torrent </a> 
-										<a href="http://googledrive.com/" class="button"> Google Drive </a></p></li></center>
+										<a href="https://www.solidfiles.com/v/VvxwQXpadLQNX" class="button"> Solidfiles </a> 
+										<a href="http://www.nyaa.se/?page=view&tid=841710" class="button"> Torrent </a> 
+										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCLVFQYnpObXRvRms" class="button"> Google Drive </a></p></li></center>
+									<!--
 									</ul>
 									<hr width="100%">
 									<ul class="actions">
