--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>[Puella] - Mahou Shoujo Ikusei Keikaku | Archive</title>
+		<title>[PeA-Works] - Mahou Shoujo Ikusei Keikaku | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
