--- a/Fall2016.html
+++ b/Fall2016.html
@@ -22,7 +22,8 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
-							<li><a href="#">Mahou Shoujo Ikusei Keikaku - 01<br>@TS</a></li>
+							<li><a href="#">Mahou Shoujo Ikusei Keikaku - 03<br>@Air</a></li>
+							<li><a href="#">Occultic; Nine - 02<br>@Air</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -49,7 +50,8 @@
 							<br>
 							<ul class="actions">
 								<li>
-								<a href="http://puella.god.jp/DC2016-MSIK.html" a class="button scrolly">Mahou Shoujo Ikusei Keikaku</a></li>
+								<a href="http://puella.god.jp/DC2016-MSIK.html" a class="button scrolly">Mahou Shoujo Ikusei Keikaku</a>
+								<a href="http://puella.god.jp/DC2016-OC9.html" a class="button scrolly">Occultic; Nine</a></li>
 							</ul>
 						</div>
 					</section>
