--- a/DC2016-OC9.html
+++ b/DC2016-OC9.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title><!-- [PeA-Works] - --> Mahou Shoujo Ikusei Keikaku | Archive</title>
+		<title>[Puella-Shiro] Occultic; Nine | Archive</title>
 		<link href="images/065.png" rel="shortcut icon" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
