--- a/Fall2016.html
+++ b/Fall2016.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#">Status Rilisan <br>- Summer 2016</a></li>
+							<li><a href="#">Status Rilisan <br>- Fall 2016</a></li>
 							<li><a href="#">Mahou Shoujo Ikusei Keikaku - 03<br>@Enc/TL/TS</a></li>
 							<li><a href="#">Occultic; Nine - 02<br>@Enc/Time/TL</a></li>
 						</ul>
