--- a/DC2016-MSIK.html
+++ b/DC2016-MSIK.html
@@ -57,6 +57,17 @@
 										<a href="https://www.solidfiles.com/v/MgwdeRNGKjmrL" class="button"> DDL - 2 </a>
                     </p></li></center>
 									</ul>
+							
+									</ul>
+									<ul class="actions">
+										<center><li><a class="button">Episode - 4</a></li>
+										<br><br>
+										<p style="line-height: 0.02em;">
+										<a href="https://drive.google.com/open?id=0B9OEDyYomYkCZHdZMWNEZGNpdms" class="button"> DDL - 1 </a>
+										<a href="https://www.nyaa.se/?page=view&tid=864827" class="button"> Torrent </a> 
+										<a href="https://www.solidfiles.com/v/335pQqKanQz7x" class="button"> DDL - 2 </a>
+                    </p></li></center>
+									</ul>
 								</div>
 							</div>
 							</align>
