--- a/Fall2016.html
+++ b/Fall2016.html
@@ -22,8 +22,8 @@
 					<nav>
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Fall 2016</a></li>
-							<li><a href="#">Mahou Shoujo Ikusei Keikaku - 03<br>@Enc/TL/TS</a></li>
-							<li><a href="#">Occultic; Nine - 02<br>@Enc/Time/TL</a></li>
+							<li><a href="#">Mahou Shoujo Ikusei Keikaku - 06<br>@Air</a></li>
+							<li><a href="#">Occultic; Nine - 03 - 04<br>@TS/QC</a></li>
 						</ul>
 					</nav>
 										<li>	
