--- a/FGO2017.html
+++ b/FGO2017.html
@@ -26,7 +26,7 @@
 									<align="left"><h2>Fate Grand Order - First Order Subtitle Indonesia</h2>
 									<br>
 										<div class="separator" style="clear: both; text-align: center;">
-											<img border="0" height="600" src="images/FGOTV.jpg" width="340" />
+											<img border="0" src="images/FGOTV.jpg" />
 										</div>
 									
 									<hr width="100%">
