--- a/Winter2017.html
+++ b/Winter2017.html
@@ -23,7 +23,8 @@
 						<ul>
 							<li><a href="#">Status Rilisan <br>- Winter 2017</a></li>
 							<li><a href="#">Fate Grand Order - First Order</a></li>
-							<li><a href="#">Akiba's Trip The Animation - 01<br>@Air</a></li>
+							<li><a href="#">Akiba's Trip The Animation - 01 - 03 / 04<br>@TS / @Enc</a></li>
+							<li><a href="#">Gabriel DropOut - 03<br>@Edit/TS</a></li>
 						</ul>
 					</nav>
 										<li>	
@@ -51,7 +52,9 @@
 							<ul class="actions">
 								<li>
 								<a href="http://puella.god.jp/FGO2017.html" a class="button scrolly">Fate Grand Order - First Order</a>
-								<a href="http://puella.god.jp/Akiba2017.html" a class="button scrolly">Akiba's Trip The Animation</a></li>
+								<a href="http://puella.god.jp/Akiba2017.html" a class="button scrolly">Akiba's Trip The Animation</a>
+								<a href="http://puella.god.jp/DC2017-GBOut.html" a class="button scrolly">Gabriel DropOut</a>
+								</li>
 							</ul>
 						</div>
 					</section>
